syntax = "proto3";
import "google/protobuf/empty.proto";
package org.example.productservice;

message FilterRequest {
  int32 fromPrice = 1;
  int32 toPrice = 2;
  repeated string categoryToFind = 3;
  int32 page = 4;
  int32 size = 5;
}

message SneakerRequest {
  double sneakerPrice = 1;
  string sneakerName = 2;
  string linkToPicture = 3;
  int32 sneakerQuantity = 4;
  repeated string categories = 5;
}

message CategoryResponse {
  int64 categoryId = 1;
  string categoryName = 2;
}
message SneakerResponse {
  int64 sneakerId = 1;
  double sneakerPrice = 2;
  string sneakerName = 3;
  string linkToPicture = 4;
  int32 sneakerQuantity = 5;
  repeated CategoryResponse categories = 6;
}
message SneakerResponseRepeated {
  repeated SneakerResponse sneakerResponses = 1;

}

message SneakerId {
  int64 sneakerId = 1;
}
message SneakerRequestWithId {
  int64 sneakerId = 1;
  SneakerRequest sneakerRequest = 2;
}

message SneakerIdQuantity {
  int64 sneakerId = 1;
  int32 quantity = 2;
}

service SneakerController {
  rpc getSneaker(SneakerId) returns (SneakerResponse);
  rpc updateSneaker(SneakerRequestWithId) returns (SneakerResponse);
  rpc addSneaker(SneakerRequest) returns (SneakerResponse);
  rpc deleteSneaker(SneakerId) returns (google.protobuf.Empty);
  rpc getAllSneakersFilter(FilterRequest) returns (stream SneakerResponse);
  rpc changeQuantity(SneakerIdQuantity) returns (SneakerResponse);
}


message CategoryId {
  int64 categoryId = 1;
}
message CategoryIdName {
  int64 categoryId = 1;
  string category_name = 2;
}
message CategoryName {
  string category_name = 1;
}
message CategoryResponseRepeated {
  repeated CategoryResponse categoryResponses = 1;
}


service CategoryController {
  rpc getCategory(CategoryId) returns (CategoryResponse);
  rpc updateCategory(CategoryIdName) returns (CategoryResponse);
  rpc addCategory(CategoryName) returns (CategoryResponse);
  rpc deleteCategory(CategoryId) returns (google.protobuf.Empty);
  rpc getAllCategory(google.protobuf.Empty) returns (stream CategoryResponse);
}